Fix visibility in IE 11

--- a/styles/widgets/common/switch.less
+++ b/styles/widgets/common/switch.less
@@ -37,20 +37,20 @@
 }
 
 .dx-switch-inner {
-    transform: translateX(calc(-50%));
+    transform: translateX(-50%);
 }
 
 .dx-switch-handle {
-    transform: translateX(calc(0%));
+    transform: translateX(0%);
 }
 
 .dx-switch-on-value {
     .dx-switch-inner {
-        transform: translateX(calc(0%));
+        transform: translateX(0%);
     }
 
     .dx-switch-handle {
-        transform: translateX(calc(-100%));
+        transform: translateX(-100%);
     }
 }
 .dx-rtl {
@@ -59,20 +59,20 @@
     }
 
     .dx-switch-inner {
-        transform: translateX(calc(50%));
+        transform: translateX(50%);
     }
 
     .dx-switch-handle {
-        transform: translateX(calc(-100%));
+        transform: translateX(-100%);
     }
 
     &.dx-switch-on-value {
         .dx-switch-inner {
-            transform: translateX(calc(0%));
+            transform: translateX(0%);
         }
 
         .dx-switch-handle {
-            transform: translateX(calc(0%));
+            transform: translateX(0%);
         }
     }
 }
